# agentic-core

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: sponsorship.yml
config/: FILESYSTEM-PROMPT.md  SKILLS-PROMPT.md  SYSTEM-PROMPT.md  TASK-PROMPT.md
docker/: docker-compose.yaml
src/: main.py
src/config/: loader.py
src/core/: adapter.py  backend.py  orchestrator.py  state.py
src/runtime/: cli.py  discord.py  interface.py  queue.py  server_manager.py  worker.py
src/tools/: skill_manager.py  system_tools.py
