[project]
name = "agentic-core"
version = "0.1.0"
description = "A reference implementation of LangChain Deepagents framework customized for Gemma 4"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.5.3",
    "discord>=2.3.2",
    "json-repair>=0.59.5",
    "langchain>=1.2.15",
    "langchain-core>=1.3.2",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.2.1",
    "redis>=7.4.0",
]
